@@ -41,10 +41,9 @@ function run() {
 start() {
     echo "start ..."
     nohup java -XX:+UseConcMarkSweepGC \
-    -Xms6114m -Xmx6114m -XX:+PrintGCDateStamps \
     -Dfile.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8 -Duser.timezone=Asia/Shanghai \
     -XX:+HeapDumpOnOutOfMemoryError -jar ${app_file_name} \
-    --isJar=true > ${binDir}/im.log 2>&1 &
+    --isJar=true > ./im.log 2>&1 &
     sleep 30;
 }
 # shellcheck disable=SC2166
